# render-tag

./: .dockerignore  .geminiignore  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  check_env.py  coco_shard_main.json  legacy_integration.yaml  mkdocs.yml  provenance_shard_main.json  pyproject.toml  tags_shard_main.csv
.agent/: rules
.agent/rules/: agents.md  architecture.md  coding.md  core.md
.agent/workflows/: generate_data.md  lint_code.md  run_tests.md  type_check.md
.agents/: rules
.claude/: settings.local.json
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  release.yml
assets/: README.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/: 01-frustum-culling.md
configs/: apriltag_checkerboard.yaml  aruco_checkerboard.yaml  aruco_plain.yaml  bench_distance.yaml  debug_fast.yaml  default.yaml  test_calibration_board.yaml  test_minimal.yaml
configs/archive/: locus_bench_p1.yaml
configs/benchmarks/: _campaign_v1.yaml  locus_ppm_sweep.yaml  locus_v1_std41h12.yaml  locus_v1_tag16h5.yaml  locus_v1_tag36h11.yaml
configs/experiments/: glossy_tags.yaml  (+6 more)
docs/: api.md  architecture.md  benchmarking.md  coordinates.md  guide.md  index.md
images/: scene_0001_cam_0000_meta.json
render-tag/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  check_env.py  pyproject.toml
render-tag/.agent/rules/: AGENTS.md
render-tag/.agent/workflows/: lint_code.md  type_check.md
render-tag/configs/: apriltag_checkerboard.yaml  apriltag_plain.yaml  aruco_checkerboard.yaml  aruco_plain.yaml  bench_distance.yaml  debug_wireframe.yaml  default.yaml
render-tag/configs/experiments/: glossy_tags.yaml
render-tag/configs/presets/apriltag/: aprilgrid.yaml  distance.yaml
render-tag/configs/presets/aruco/: checkerboard.yaml  checkerboard_v2.yaml
render-tag/configs/scenarios/: easy_office.yaml  hard_industrial.yaml
render-tag/experiments/: sensor_test.json
render-tag/fast_output/: recipes_shard_0.json
render-tag/scripts/: benchmark_hot_loop.py  run_docker.sh
render-tag/src/render-tag/: cli.py
render-tag/src/render_tag/: annotation_utils.py  camera_geometry.py  cli.py  config.py  experiment.py  experiment_schema.py  generator.py  math_utils.py  schema.py  schemas.py  tag_gen.py  visibility_geometry.py
render-tag/src/render_tag/backend/: assets.py  bridge.py  camera.py  executor.py  layouts.py  projection.py  render_loop.py  renderer.py  scene.py  sensors.py  zmq_server.py
render-tag/src/render_tag/cli/: assets.py  audit.py  experiment.py  generate.py  job.py  main.py  tools.py  viz.py
render-tag/src/render_tag/common/: git.py  logging.py  math.py
render-tag/src/render_tag/data_io/: annotations.py  auditor.py  auditor_schema.py  auditor_viz.py  manifest.py  types.py  visualization.py  writers.py
render-tag/src/render_tag/generation/: scene.py  tags.py
render-tag/src/render_tag/geometry/: board.py  camera.py  layouts.py  math.py  projection_math.py  visibility.py
render-tag/src/render_tag/orchestration/: assets.py  executors.py  experiment.py  experiment_schema.py  persistent_worker.py  sharding.py  unified_orchestrator.py  worker_pool.py  zmq_client.py
render-tag/src/render_tag/schema/: __init__.py  base.py  hot_loop.py  job.py
render-tag/src/render_tag/scripts/: assets.py  blender_main.py  camera.py  compositor.py  executor.py  layouts.py  projection.py  scene.py  upload_assets.py  writers.py
render-tag/src/render_tag/tools/: benchmarking.py  telemetry_auditor.py  validator.py  viz.py  viz_2d.py
render-tag/test_output_refactor/: annotations.json  recipes_shard_0.json  rich_truth.json  tags_shard_0.csv
render-tag/tests/: conftest.py  debug_viz.py  manual_hot_loop_perf.py  manual_worker_pool.py  test_annotation_logic.py  test_board_geometry.py  test_camera_geometry.py  test_cli.py  test_compositor.py  test_config.py  test_geometry_board.py  test_geometry_camera.py  test_geometry_math.py  test_geometry_projection_math.py  test_geometry_visibility.py  test_integration.py  test_io_annotations.py  test_io_types.py  test_io_writers.py  test_math_pure.py  test_math_utils.py  test_reproducibility.py  test_schemas.py  test_tag_gen.py  test_visibility_pure.py  test_writers.py
render-tag/tests/integration/: test_backend_warmup.py  test_ephemeral_worker.py  test_executor_mock.py  test_hot_loop_render.py  test_industrial_pipeline.py  test_integration.py  test_persistent_sharding.py  test_provenance_integration.py  test_reproducibility.py  test_resume_logic.py  test_rolling_shutter_distortion.py  test_zmq_loopback.py
render-tag/tests/mocks/: blender_api.py  blenderproc_api.py
render-tag/tests/unit/: test_asset_manager.py  test_asset_validator.py  test_auditor_advanced.py  test_auditor_diff.py  test_auditor_gates.py  test_auditor_geometry.py  test_auditor_ingestion.py  test_auditor_outliers.py  test_auditor_reporting.py  test_auditor_viz.py  test_backend_pooling.py  test_backend_world.py  test_blender_bridge.py  test_cli.py  test_cli_audit.py  test_cli_job.py  test_cli_job_execution.py  test_cli_manifest_integration.py  test_cli_skip_render.py  test_cli_validation.py  test_cli_verify.py  test_compositor_logic.py  test_config.py  test_dataset_auditor.py  test_executors.py  test_experiment.py  test_fingerprinting.py  test_generator_determinism.py  test_geometry_board.py  test_geometry_visibility.py  test_git_utils.py  test_hot_loop_schema.py  test_job_spec.py  test_lighting_presets.py  test_manifest.py  test_motion_blur_logic.py  test_persistent_worker.py  test_provenance_schema.py  test_rolling_shutter_backend.py  test_rolling_shutter_schema.py  (+14 more)
scripts/: benchmark_hot_loop.py  capture_benchmark_parity_fixtures.py  capture_compiler_parity_fixtures.py  capture_lighting_drift_fixtures.py  capture_sensor_drift_fixtures.py  debug_texture.py  generate_benchmarks.sh  hub_manager.py  release.sh  sanity_check_cv_safe.py  verify_calibration.py  worker_bootstrap.py
tests/: README.md  conftest.py
(+839 files in other folders)
