[project]
name = "render-tag"
dynamic = ["version"]
description = "Procedural 3D data generation for AprilTag training (Offline)."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Noe Fontana" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "huggingface-hub>=0.24.0",
    "datasets>=2.20.0",
    "orjson>=3.10",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
# Required for 3D rendering
backend = [
    "blenderproc>=2.8.0",
]
# Required for 2D visualization and Shadow Render
viz = [
    "matplotlib>=3.7",
    "fiftyone>=0.24",
    "pycocotools>=2.0",
]
# Required for dataset auditing and analytics
audit = [
    "polars>=1.0.0",
    "plotly>=5.15.0",
]
# Required for distributed orchestration and telemetry
orchestration = [
    "pyzmq>=25.0.0",
    "gputil>=1.4.0",
]
# Required for asset synchronization with Hugging Face
assets = [
]
# Install everything
all = [
    "render-tag[backend,viz,audit,orchestration,assets]",
]

[project.urls]
Repository = "https://github.com/NoeFontana/render-tag"

[project.scripts]
render-tag = "render_tag.cli:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/render_tag"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff",
    "mypy",
    "ty",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
    "pymdown-extensions>=10.20.1",
    "import-linter",
    "fake-bpy-module-4.2",
    "bandit>=1.9.3",
    "interrogate>=1.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["N803", "N806", "B008", "UP040"]

[tool.ruff.lint.isort]
known-first-party = ["render_tag"]
force-to-top = ["blenderproc"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
# Standard rules enabled
# unresolved-import = "ignore" # Removed to enable Blender API checking
possibly-missing-attribute = "ignore"
unresolved-attribute = "ignore"
invalid-method-override = "ignore"
invalid-assignment = "ignore"
unused-ignore-comment = "ignore"
invalid-argument-type = "ignore"

[tool.pytest.ini_options]
addopts = "-n 4 --dist loadfile"
markers = [
    "integration: marks tests as slow integration tests (deselect with '-m \"not integration\"')",
    "timeout: marks tests with a timeout duration",
]
testpaths = ["tests"]
filterwarnings = [
    "error::DeprecationWarning:render_tag.*",
]

[tool.importlinter]
root_package = "render_tag"
include_external_packages = true

# 1. Layered architecture. Higher layers may import from lower layers; siblings
#    grouped with `|` may not import each other. The sibling group reflects that
#    audit, viz, and backend are independent consumers of generation/data_io/core.
[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
containers = ["render_tag"]
layers = [
    "cli",
    "orchestration",
    "audit | viz | backend",
    "generation",
    "data_io",
    "core",
]

# 2. Host isolation. Only render_tag.backend may touch Blender / BlenderProc.
#    Everything else runs in the host process and must remain importable
#    without a Blender interpreter.
[[tool.importlinter.contracts]]
name = "Host isolation: only backend touches Blender"
type = "forbidden"
source_modules = [
    "render_tag.cli",
    "render_tag.orchestration",
    "render_tag.audit",
    "render_tag.viz",
    "render_tag.generation",
    "render_tag.data_io",
    "render_tag.core",
]
forbidden_modules = [
    "bpy",
    "blenderproc",
    "mathutils",
    "render_tag.backend",
]

# 3. Determinism. The procedural generator must use seeded numpy RNGs only;
#    Python's `random` module pulls from a hidden global state and breaks
#    bit-reproducibility of recipes.
[[tool.importlinter.contracts]]
name = "Determinism: generation must not import random"
type = "forbidden"
source_modules = ["render_tag.generation"]
forbidden_modules = ["random"]

# 4. Sibling independence. Redundant with the layers contract above, but kept
#    explicit so future contributors see the intent: these three packages are
#    parallel consumers of generation, never each other.
[[tool.importlinter.contracts]]
name = "Sibling independence: audit, viz, backend"
type = "independence"
modules = [
    "render_tag.audit",
    "render_tag.viz",
    "render_tag.backend",
]

[tool.hatch.version]
path = "pyproject.toml"
pattern = '(?m)^version = "(?P<version>[^"]+)"'

[tool.render_tag]
version = "0.8.0"

